--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
 <resources>
-	<string name="app_name">FocusStart</string>
+	<string name="app_name" translatable="false">FocusStart</string>
+	<string name="title_activity_example" translatable="false">ExampleActivity</string>
+	<string name="add_url">Введите URL канала:</string>
+	<string name="action_settings">Настройки</string>
+	<string name="add">Добавить</string>
+	<string name="cancel">Отмена</string>
+    <string name="reload">Обновить</string>
+	<string name="http_or_https" translatable="false">http(s)://</string>
+	<string name="notification_checkbox" translatable="false">notif</string>
+	<string name="notification_button" translatable="false">time</string>
+    <string name="plural_prefix">В канале</string>
+    <string name="internet_exception">Интернет-соединение отсутствует</string>
+    <string name="turn_on_internet">Включить интернет</string>
+    <string name="io_exception">Ошибка при вводе URL, проверьте правильность и повторите</string>
+    <string name="turn_on_notifications">Включить уведомления</string>
+    <string name="notifications">Уведомления</string>
+    <string name="period_notifications">Задать период проверки обновлений</string>
+    <string name="period">Периодичность</string>
+    <string name="check_updates">Уведомления</string>
+    <string name="channel_image_image_description">channel_image</string>
+
+    <plurals name="plurals_news">
+		<item quantity="zero">нет обновлений</item>
+		<item quantity="one">имеется %1$d обновление</item>
+		<item quantity="two">имеется %1$d обновления</item>
+		<item quantity="few">имеется %1$d обновления</item>
+		<item quantity="many">имеется %1$d обновлений</item>
+		<item quantity="other">имеется %1$d обновлений</item>
+	</plurals>
 </resources>
