--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">FocusStart</string>
-    <string name="title_activity_example" translatable="false">ExampleActivity</string>
-    <string name="add_url">Enter the URL of the channel:</string>
-    <string name="action_settings">Settings</string>
-    <string name="add">Add</string>
-    <string name="cancel">Cancel</string>
-    <string name="reload">Refresh</string>
-    <string name="http_or_https" translatable="false">http(s)://</string>
-    <string name="notification_checkbox" translatable="false">notif</string>
-    <string name="notifications_list" translatable="false">time</string>
-    <string name="plural_prefix">The channel</string>
-    <string name="internet_exception">No Internet connection</string>
-    <string name="turn_on_internet">Enable Internet</string>
-    <string name="io_exception">Error typing URL, check correctness and repeat</string>
-    <string name="turn_on_notifications">Enable notifications</string>
-    <string name="notifications">Notifications</string>
-    <string name="period_notifications">Set update validation period</string>
-    <string name="period">Rhythm</string>
-    <string name="check_updates">Checking for updates</string>
-    <string name="notifications_list_dialog">Set the check period for updates</string>
-    <string name="notifications_entries_default">Once per hour</string>
-    <string name="browser_missing">Your device does not have a browser</string>
+    <string name="channel_add_dialog_add_url">Enter the URL of the channel:</string>
+    <string name="channel_add_dialog_add_button">Add</string>
 
-    <plurals name="plurals_news">
+    <string name="settings_activity_title">Settings</string>
+
+    <string name="dialog_cancel_button">Cancel</string>
+
+    <string name="channel_refresh_dialog_reload_button">Refresh</string>
+
+    <string name="rss_channel_intent_service_plural_prefix">The channel</string>
+
+    <string name="no_internet_dialog_internet_message">No Internet connection</string>
+    <string name="no_internet_dialog_turn_on_internet">Enable Internet</string>
+
+    <string name="activity_channel_controller_io_exception">Error typing URL, check correctness and repeat</string>
+
+    <string name="settings_fragment_turn_on_notifications">Enable notifications</string>
+    <string name="settings_fragment_notifications">Notifications</string>
+    <string name="settings_fragment_period_notifications">Set update validation period</string>
+    <string name="settings_fragment_notification_list_title">Rhythm</string>
+    <string name="settings_fragment_check_updates">Checking for updates</string>
+    <string name="settings_fragment_notifications_list_dialog">Set the check period for updates</string>
+    <string name="settings_fragment_notifications_entries_default">Once per hour</string>
+    <string name="settings_fragment_theme_list_title">Theme</string>
+    <string name="settings_fragment_theme_list_dialog">Select a theme</string>
+
+    <string name="channel_item_recycler_adapter_browser_missing">Your device does not have a browser</string>
+
+    <plurals name="rss_channel_intent_service_plurals_news">
         <item quantity="one">has %1$d update</item>
         <item quantity="other">has %1$d updates</item>
     </plurals>
