--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,6 +24,7 @@
     <string name="settings_fragment_notifications_list_dialog">Set the check period for updates</string>
     <string name="settings_fragment_notifications_entries_default">Once per hour</string>
     <string name="settings_fragment_theme_list_title">Theme</string>
+    <string name="settings_fragment_theme_list_default">Light</string>
     <string name="settings_fragment_theme_list_dialog">Select a theme</string>
 
     <string name="channel_item_recycler_adapter_browser_missing">Your device does not have a browser</string>
